objects/WorkTeam__c.object
<CustomObject>
    <description>Custom Object used to store the work teams hierarchy used to handle the security at Business Process level.</description>
    <fields>
        <fullName>AmountOfActiveChildTeams__c</fullName>
        <description>Summary with the amount of child teams related to the work team.</description>
        <label>Amount of Active Child teams</label>
        <summaryFilterItems>
            <field>Team_Member__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Team_Member__c.Work_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PFTA-8791 - Used to indicate if the work team is active or not.</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Profile__c</fullName>
        <formula>Manager__r.Profile.Name</formula>
        <label>Manager Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the manager of the workplace</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workplaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to handle the hierarchy relationship between the Work Teams.</description>
        <label>Parent Team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Child Work Teams</relationshipLabel>
        <relationshipName>Workplaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicGroupAPIName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>It is used to store the API name of the public group created as a mirror of the work team.
Used to control the synchronization between this 2 objects.</description>
        <externalId>true</externalId>
        <label>Public Group API Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reviewer_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the reviewer team for the RAV.</description>
        <label>Reviewer Team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Work Teams (Reviewer Team)</relationshipLabel>
        <relationshipName>Work_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <description>Stores the name of the division (team).</description>
        <externalId>true</externalId>
        <label>Team Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Team_Queue__c</fullName>
        <description>It is used to store the Developer name of the queue related to the team.</description>
        <externalId>true</externalId>
        <label>Team Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Place__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the Work Team with the Agency or Point of Sales.</description>
        <label>Work Place</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipLabel>Work Teams</relationshipLabel>
        <relationshipName>Work_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Team_Number__c</fullName>
        <description>Autogenerated number of the workteam.</description>
        <displayFormat>WT-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Work Team Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>WorkteamLevel__c</fullName>
        <label>Workteam Level</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>borrar__c</fullName>
        <label>borrar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>view</fullName>
                </value>
                <value>
                    <fullName>create</fullName>
                </value>
                <value>
                    <fullName>edit</fullName>
                </value>
                <value>
                    <fullName>delete</fullName>
                </value>
                <value>
                    <fullName>view all</fullName>
                </value>
                <value>
                    <fullName>modifiy all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Team_Name__c</columns>
        <columns>Parent_Team__c</columns>
        <columns>AmountOfActiveChildTeams__c</columns>
        <columns>Manager__c</columns>
        <columns>Work_Place__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>